Kubernetes/Ejercicio-4/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-ejercicio4
spec:
  selector:
    matchLabels:
      app: myapp-ejercicio4
  template:
    metadata:
      labels:
        app: myapp-ejercicio4
    spec:
      containers:
      - name: my-container
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
