Kubernetes/Ejercicio-4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-ejercicio4
spec:
  selector:
    app: myapp-ejercicio4
  ports:
  - port: 80
    targetPort: 3000
